apps/base/vitals/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vitals
  labels:
    http-ingress: "true"
